--- a/00python_basic.ipynb
+++ b/00python_basic.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c28dbac3-9aad-4a62-84a7-8369e27bdb96",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,17 @@
     }
    ],
    "source": [
-    "## dict 연습\n",
+    "## dict 연습                     #key와 value 값을\n",
+    "# empty dict 생성 \n",
+    "my_dict2 = {}\n",
     "my_dict1 = dict()  # {}\n",
+    "\n",
     "my_dict = {\n",
     "    'name': '파이썬'\n",
     "}\n",
-    "my_dict['addr'] = '서울'\n",
+    "\n",
+    "# addr item 추가\n",
+    "my_dict['addr'] = '서울'       #[key] = value \n",
     "print(my_dict)\n",
     "print(my_dict['name'])"
    ]
@@ -717,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
