숙제 및 04_08 완료

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "94c12fd6",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,6 @@
     "\n",
     "# 응답(response)이 OK 이면\n",
     "if res.ok:\n",
-    "    pass\n",
     "    # 응답 (response)에서 text 추출 - source 보기\n",
     "    html = res.text\n",
     "    # print(html)\n",
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9f2e4ef8",
    "metadata": {},
    "outputs": [
@@ -288,10 +287,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "====> https://news.naver.com/section/105 IT/과학뉴스 <====\n",
+      "====> https://news.naver.com/section/103 생활/문화뉴스 <====\n",
       "<Response [200]>\n",
       "<class 'requests.models.Response'>\n",
-      "200 True\n"
+      "200 True\n",
+      "0\n",
+      "https://n.news.naver.com/mnews/article/079/0004011520 예장통합 포항노회·포항남노회, 제110회 정기노회 개최\n",
+      "https://n.news.naver.com/mnews/article/comment/079/0004011520 \n",
+      "https://n.news.naver.com/mnews/article/056/0011927221 이영애, 32년 만에 연극 복귀…‘헤다 가블러’ 주연\n",
+      "https://n.news.naver.com/mnews/article/comment/056/0011927221 \n",
+      "https://n.news.naver.com/mnews/article/001/0015317849 삼바 축제·가면 조사하는 국립민속박물관…'세계민속관' 만든다(종합)\n",
+      "https://n.news.naver.com/mnews/article/comment/001/0015317849 \n",
+      "https://n.news.naver.com/mnews/article/003/0013170003 푸조, '308 스마트 하이브리드' 출시…\"차세대 모델\"\n",
+      "https://n.news.naver.com/mnews/article/comment/003/0013170003 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472819 KGM, 사모전환사채 전환 청구 및 자본금 감액 정정 공시\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472819 \n",
+      "https://n.news.naver.com/mnews/article/011/0004471612 '통일교' 가정연합 \"日 법원 해산 명령은 '종교 탄압'\"\n",
+      "https://n.news.naver.com/mnews/article/comment/011/0004471612 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472589 “452km 달린다”…KGM, 상품성 개선 ‘토레스 EVX 알파’ 출시\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472589 \n",
+      "https://n.news.naver.com/mnews/article/145/0000021876 회사 칫솔, 거의 1년째 쓰고 있는데요…\n",
+      "https://n.news.naver.com/mnews/article/comment/145/0000021876 \n",
+      "https://n.news.naver.com/mnews/article/296/0000088402 소화 안되고 집중력 떨어진다면, ‘이것’ 때문?…이런 음식 먹으면 도움\n",
+      "https://n.news.naver.com/mnews/article/comment/296/0000088402 \n",
+      "https://n.news.naver.com/mnews/article/214/0001416868 [날씨] 메마른 대기, 바람도 강해‥내일 오후 차츰 비\n",
+      "https://n.news.naver.com/mnews/article/comment/214/0001416868 \n",
+      "https://n.news.naver.com/mnews/article/023/0003898306 ‘5분’이 중요합니다! 당장 응급실 가야할 협심증 전조증상\n",
+      "https://n.news.naver.com/mnews/article/comment/023/0003898306 \n",
+      "https://n.news.naver.com/mnews/article/346/0000090106 “스스로에게 ‘이 생각’ 세뇌시켰더니”… 살 쭉 빠졌다, 구체적인 방법은?\n",
+      "https://n.news.naver.com/mnews/article/comment/346/0000090106 \n",
+      "https://n.news.naver.com/mnews/article/052/0002177258 [날씨] 건조특보 확대·황사 남쪽 이동...내일은 단비\n",
+      "https://n.news.naver.com/mnews/article/comment/052/0002177258 \n",
+      "https://n.news.naver.com/mnews/article/277/0005574760 제너시스BBQ, 위메프 인수의향서 제출…\"재무제표 검토 단계\"\n",
+      "https://n.news.naver.com/mnews/article/comment/277/0005574760 \n",
+      "https://n.news.naver.com/mnews/article/081/0003531785 600년간 바다에 잠들어있던 조선시대 배 인양…마도4호선 인양\n",
+      "https://n.news.naver.com/mnews/article/comment/081/0003531785 \n",
+      "https://n.news.naver.com/mnews/article/047/0002469029 계엄군 봉쇄 뚫은 길목... 광주와 전남 이어준 나주를 찾아\n",
+      "https://n.news.naver.com/mnews/article/comment/047/0002469029 \n",
+      "https://n.news.naver.com/mnews/article/014/0005333010 '남 입었던 거면 어때'..고물가에 중고거래 패션몰 뜬다\n",
+      "https://n.news.naver.com/mnews/article/comment/014/0005333010 \n",
+      "https://n.news.naver.com/mnews/article/031/0000922884 \"키 크면 암 더 잘 걸려\"⋯사실일까?\n",
+      "https://n.news.naver.com/mnews/article/comment/031/0000922884 \n",
+      "https://n.news.naver.com/mnews/article/057/0001880541 팔굽혀펴기로 치매 예방하기?…근육량 증가하면 당뇨·치매 위험 낮아져 [Health Recipe]\n",
+      "https://n.news.naver.com/mnews/article/comment/057/0001880541 \n",
+      "https://n.news.naver.com/mnews/article/006/0000129392 '대통령 명예훼손' 압수수색 당한 뉴스타파 기자들, 영화로 만난다\n",
+      "https://n.news.naver.com/mnews/article/comment/006/0000129392 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472873 단순 건망증?… 치매 예방 위해 기억력 개선에 힘써야\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472873 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472869 휴대폰에, 집안일에…하루종일 쉴틈 없는 손 당신의 손가락, 안녕하십니까\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472869 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472863 국내외 특허만 19건 … 추간공확장술로 척추 치료 새 지평 열어\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472863 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472862 \"무병장수의 꿈 'GLP-1'이 이뤄줄 수 있습니다\"\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472862 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472861 잘 낫지않는 날개 뼈 사이 통증 … 목 디스크 의심하세요\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472861 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472860 인기 많은 귓속형 보청기… 꽁꽁 숨기려다 '기능' 놓칠수도 [기고]\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472860 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472859 야외활동 많아지는 봄철 어깨충돌증후군 '주의보'\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472859 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472858 2030 우울증 알고보니 … 탈모가 원인?\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472858 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472857 봄철 면역관리 … 고함량 비타민으로 해볼까\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472857 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472856 '암 이기는 천연항암제' 정보 암환우 체력관리법 알려줘요\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472856 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472855 SK바사, 폐렴구균백신 상용화 '눈앞'\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472855 \n",
+      "https://n.news.naver.com/mnews/article/422/0000729053 [날씨] 영남 중심 대기 건조…내일 오후부터 전국 비\n",
+      "https://n.news.naver.com/mnews/article/comment/422/0000729053 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472852 5분 충전에 700km 7년만에 환골탈태 넥쏘 수소차 대중화 앞당긴다\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472852 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472850 럭셔리 명가는 영원하다 … 수입차 빅2 대격돌\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472850 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472849 더 진화한 초럭셔리 세단 …'환희의 여신'이 이끄는 완벽한 주행\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472849 \n",
+      "https://n.news.naver.com/mnews/article/009/0005472848 내 움직임에 반응하는 엔진·진동… \"그래, 이 맛에 내연차 타지\"\n",
+      "https://n.news.naver.com/mnews/article/comment/009/0005472848 \n",
+      "https://n.news.naver.com/mnews/article/018/0005982575 KG모빌리티, 무상감자 정정… 1조 결손금 해소 본격화\n",
+      "https://n.news.naver.com/mnews/article/comment/018/0005982575 \n",
+      "https://n.news.naver.com/mnews/article/346/0000090105 잇따르는 ‘마사지 사망’ 사고… 도대체 왜?\n",
+      "https://n.news.naver.com/mnews/article/comment/346/0000090105 \n",
+      "https://n.news.naver.com/mnews/article/215/0001205016 폴리코사놀 허위 원산지 표기 성행…'쿠바산' 아닌 '중국산'\n",
+      "https://n.news.naver.com/mnews/article/comment/215/0001205016 \n",
+      "https://n.news.naver.com/mnews/article/296/0000088400 인공감미료 '사카린'의 대반전?…'항생제 내성' 없앤다\n",
+      "https://n.news.naver.com/mnews/article/comment/296/0000088400 \n",
+      "https://n.news.naver.com/mnews/article/346/0000090104 “이 얼굴이 53세?” 신분증 없으면 복권도 못 사… ‘초동안 외모’ 남성, 관리법은?\n",
+      "https://n.news.naver.com/mnews/article/comment/346/0000090104 \n",
+      "https://n.news.naver.com/mnews/article/030/0003301403 BYD, 첫 전기차 '아토3' 14일 고객 인도…'씨라이언7' 사전 계약 시작\n",
+      "https://n.news.naver.com/mnews/article/comment/030/0003301403 \n",
+      "https://n.news.naver.com/mnews/article/469/0000858336 글로벌 청정에너지 40% 돌파··· 한국 재생에너지 세계 3분의 1\n",
+      "https://n.news.naver.com/mnews/article/comment/469/0000858336 \n"
      ]
     }
    ],
@@ -326,9 +412,37 @@
     "    print(res)\n",
     "    print(type(res))\n",
     "    print(res.status_code, res.ok)\n",
+    "    if res.ok:\n",
+    "        # 응답 (response)에서 text 추출 - source 보기\n",
+    "        html = res.text\n",
+    "        # print(html)\n",
+    "        # BeautifulSoup 객체 생성  \n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        #print(soup)\n",
+    "        \n",
+    "        # CSS 선택자\n",
+    "        # <div class = 'sa_text'><a></a></div>\n",
+    "        #print(len(soup.select(\"div.sa_text a\")))\n",
+    "        print(len(soup.select(\"div.sa_text a[href*='mnews/article']\")))\n",
+    "        # print(soup.select(\"div.sa_text a[href*='mnews/article']\"))\n",
+    "        a_tag_list = soup.select(\"div.sa_text a[href*='mnews/article']\")\n",
+    "        print(type(a_tag_list)) # [<a href =\"http://\">뉴스제목</a>] ResultSet객체 , <a></a> : Tag 객체\n",
+    "        #print(a_tag_list) #[<a></a>,<a></a>]\n",
+    "        for a_tag in a_tag_list:\n",
+    "            #print(type(a_tag))\n",
+    "            title = a_tag.text.strip() #strip() 공백을 제거하는 함수\n",
+    "            link = a_tag['href']   #herf 속성의 값을 가져온ㄷ나\n",
+    "            print(link, title) \n",
+    "        \n",
+    "        \n",
+    "    else:\n",
+    "        # 응답(response)이 Error 이면 status code 출력    \n",
+    "       print(f'에러 코드 = {res.status_code}')\n",
+    "\n",
+    "    \n",
     "\n",
     "#함수호출\n",
-    "print_news(105)"
+    "print_news(103)"
    ]
   },
   {
