최종 버전_"몇분전"텍스트를 삭제

--- a/01_news_scraping.ipynb
+++ b/01_news_scraping.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "869a5c08",
    "metadata": {},
    "outputs": [
@@ -37,76 +37,70 @@
       "https://news.daum.net/economy\n",
       "200\n",
       "<class 'bs4.element.ResultSet'> 9\n",
-      "https://v.daum.net/v/20250408180502078\n",
-      "세수 펑크에 빛 바랜 건전재정…나라살림 적자 또 100조 넘었다 나라 살림의 건전성을 나타내는 관리재정수지 적자 규모가 지난해 100조원을 넘어섰다. 코로나19에 대응하기 위해 대규모 추가경정예산을 편성한 2020년, 2022년에 이어 세 번째다. 경기 위축으로 법인세 수입이 크게 감소했는데 지출은 충분히 줄이지 못한 결과로 풀이된다. 올해도 세수 결손 가능성이 큰 데다 대규모 추경 편성도 계획돼 있어 재정 건전성 악화 한국경제 5분 전\n",
-      "https://v.daum.net/v/20250408180205986\n",
-      "[단독] \"돈 잘 버는 알짜부터\"…SK '몸값 5조' 실트론 매각한다 한국경제 8분 전\n",
+      "https://v.daum.net/v/20250408184905360\n",
+      "‘관세 직격탄’ 애플 주가 19% ‘뚝’… 갈수록 커지는 ‘T공포’ [관세전쟁 후폭풍]\n",
+      "https://v.daum.net/v/20250408183514025\n",
+      "미·중 치킨게임…원화값 1473원대 추락, 글로벌 금융위기 후 최저\n",
       "https://v.daum.net/v/20250408175343664\n",
-      "美·中 관세 폭탄 돌리기…‘새우등’ 한국 경제 불안감 더 커졌다 중앙일보 16분 전\n",
+      "美·中 관세 폭탄 돌리기…‘새우등’ 한국 경제 불안감 더 커졌다\n",
       "https://v.daum.net/v/20250408175111585\n",
-      "동영상     나랏빚 1175조 '역대 최대'…추경 재원 바닥 한국경제TV 19분 전\n",
+      "나랏빚 1175조 '역대 최대'…추경 재원 바닥\n",
       "https://v.daum.net/v/20250408174344325\n",
-      "메디젠휴먼케어, \"23andMe 파산..한국 유전체 산업의 위기 아닌 기회\" 머니투데이 26분 전\n",
+      "메디젠휴먼케어, \"23andMe 파산..한국 유전체 산업의 위기 아닌 기회\"\n",
       "https://v.daum.net/v/20250408173713085\n",
-      "칩 확보서 데이터센터까지···전 산업에 'AI 고속도로' 깔아야 서울경제 33분 전\n",
+      "칩 확보서 데이터센터까지···전 산업에 'AI 고속도로' 깔아야\n",
       "https://v.daum.net/v/20250408173626057\n",
-      "77년 묵은 정부조직, 데이터 중심 대수술···'AI 부총리' 도입을 서울경제 33분 전\n",
-      "https://v.daum.net/v/20250408172845794\n",
-      "동영상     [이슈ON] 마은혁 받고 '윤 절친' 이완규 투입...한덕수는 왜? YTN 41분 전\n",
+      "77년 묵은 정부조직, 데이터 중심 대수술···'AI 부총리' 도입을\n",
       "https://v.daum.net/v/20250408161553109\n",
-      "트럼프발 주가폭락에 동아 \"경제적 핵전쟁\" 조선 \"금융위기 후 최악\" 미디어오늘 2시간 전\n"
+      "트럼프발 주가폭락에 동아 \"경제적 핵전쟁\" 조선 \"금융위기 후 최악\"\n",
+      "https://v.daum.net/v/20250408160526681\n",
+      "공황과 격변의 판도라 박스가 열리다\n"
      ]
     }
    ],
    "source": [
     "\n",
     "\n",
-    "   \n",
+    "# 요청 파라미터\n",
     "req_param = {\n",
-    "    'sid': 'economy'         #딕셔너리 \n",
-    "                        #sid 번호에 따라 사이트가 바뀌기에\n",
+    "    'sid': 'economy'         # 딕셔너리\n",
     "}\n",
-    "# \n",
-    "url = 'https://news.daum.net/{sid}'.format(**req_param) #딕셔너리 넣을땐 앞에 **추가\n",
+    "\n",
+    "# URL 생성\n",
+    "url = 'https://news.daum.net/{sid}'.format(**req_param)\n",
     "print(url)\n",
     "\n",
-    "\n",
-    "# 요청 헤더 설정 : 브라우저 정보 (사람처럼 보이게 하려고 설정하는 것임)\n",
+    "# 요청 헤더 설정\n",
     "req_header = {\n",
     "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36'\n",
     "}\n",
     "\n",
-    "# requests 의 get() 함수 호출하기 \n",
+    "# GET 요청\n",
     "res = requests.get(url, headers=req_header)\n",
     "print(res.status_code)\n",
+    "\n",
     "res.encoding = 'utf-8'\n",
-    "# 응답(response)이 OK 이면\n",
+    "\n",
+    "# 응답 OK인 경우\n",
     "if res.ok:\n",
-    "    # 응답 (response)에서 text 추출 - source 보기\n",
     "    html = res.text\n",
-    "    # print(html)\n",
-    "    # BeautifulSoup 객체 생성  \n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
-    "    #print(soup)\n",
-    "    \n",
-    "    # CSS 선택자\n",
-    "    a_tag_list = soup.select(\"ul.list_newsheadline2 li a[href*='daum.net/v']\")\n",
-    "    print(type(a_tag_list),(len(soup.select(\"ul.list_newsheadline2 li a[href*='daum.net/v']\")))) \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    for a_tag in a_tag_list:\n",
-    "        #print(type(a_tag))\n",
-    "        title = a_tag.text.strip() #strip() 공백을 제거하는 함수\n",
-    "        link = a_tag['href']   #herf 속성의 값을 가져온ㄷ나\n",
-    "        print(link)\n",
-    "        print(title) \n",
+    "\n",
+    "    # li 태그 리스트 추출\n",
+    "    li_tag_list = soup.select(\"ul.list_newsheadline2 li\")\n",
+    "    print(type(li_tag_list), len(li_tag_list))\n",
+    "\n",
+    "    for li_tag in li_tag_list:\n",
+    "            a_tag = li_tag.find(\"a\")\n",
+    "            title = li_tag.select_one(\"div.cont_thumb  strong.tit_txt\").text.strip()  # strip() 공백을 제거하는 함수\n",
+    "            link = a_tag[\"href\"]  # href 속성의 값을 가져온ㄷ나\n",
+    "            print(link)\n",
+    "            print(title)\n",
     "        \n",
-    "    # <a> 태그 리스트 순회하기    \n",
+    "\n",
+    "# 응답 실패한 경우\n",
     "else:\n",
-    "    # 응답(response)이 Error 이면 status code 출력    \n",
-    "    print(f'에러 코드 = {res.status_code}')\n",
-    " "
+    "    print(f'에러 코드 = {res.status_code}')\n"
    ]
   },
   {
@@ -119,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "id": "4673d08e",
    "metadata": {},
    "outputs": [
@@ -128,44 +122,44 @@
      "output_type": "stream",
      "text": [
       "=====>https://news.daum.net/economy 경제뉴스<=====\n",
-      "https://v.daum.net/v/20250408180502078\n",
-      "세수 펑크에 빛 바랜 건전재정…나라살림 적자 또 100조 넘었다 나라 살림의 건전성을 나타내는 관리재정수지 적자 규모가 지난해 100조원을 넘어섰다. 코로나19에 대응하기 위해 대규모 추가경정예산을 편성한 2020년, 2022년에 이어 세 번째다. 경기 위축으로 법인세 수입이 크게 감소했는데 지출은 충분히 줄이지 못한 결과로 풀이된다. 올해도 세수 결손 가능성이 큰 데다 대규모 추경 편성도 계획돼 있어 재정 건전성 악화 한국경제 5분 전\n",
-      "https://v.daum.net/v/20250408180205986\n",
-      "[단독] \"돈 잘 버는 알짜부터\"…SK '몸값 5조' 실트론 매각한다 한국경제 8분 전\n",
+      "https://v.daum.net/v/20250408184905360\n",
+      "‘관세 직격탄’ 애플 주가 19% ‘뚝’… 갈수록 커지는 ‘T공포’ [관세전쟁 후폭풍]\n",
+      "https://v.daum.net/v/20250408183514025\n",
+      "미·중 치킨게임…원화값 1473원대 추락, 글로벌 금융위기 후 최저\n",
       "https://v.daum.net/v/20250408175343664\n",
-      "美·中 관세 폭탄 돌리기…‘새우등’ 한국 경제 불안감 더 커졌다 중앙일보 16분 전\n",
+      "美·中 관세 폭탄 돌리기…‘새우등’ 한국 경제 불안감 더 커졌다\n",
       "https://v.daum.net/v/20250408175111585\n",
-      "동영상     나랏빚 1175조 '역대 최대'…추경 재원 바닥 한국경제TV 19분 전\n",
+      "나랏빚 1175조 '역대 최대'…추경 재원 바닥\n",
       "https://v.daum.net/v/20250408174344325\n",
-      "메디젠휴먼케어, \"23andMe 파산..한국 유전체 산업의 위기 아닌 기회\" 머니투데이 26분 전\n",
+      "메디젠휴먼케어, \"23andMe 파산..한국 유전체 산업의 위기 아닌 기회\"\n",
       "https://v.daum.net/v/20250408173713085\n",
-      "칩 확보서 데이터센터까지···전 산업에 'AI 고속도로' 깔아야 서울경제 33분 전\n",
+      "칩 확보서 데이터센터까지···전 산업에 'AI 고속도로' 깔아야\n",
       "https://v.daum.net/v/20250408173626057\n",
-      "77년 묵은 정부조직, 데이터 중심 대수술···'AI 부총리' 도입을 서울경제 33분 전\n",
-      "https://v.daum.net/v/20250408172845794\n",
-      "동영상     [이슈ON] 마은혁 받고 '윤 절친' 이완규 투입...한덕수는 왜? YTN 41분 전\n",
+      "77년 묵은 정부조직, 데이터 중심 대수술···'AI 부총리' 도입을\n",
       "https://v.daum.net/v/20250408161553109\n",
-      "트럼프발 주가폭락에 동아 \"경제적 핵전쟁\" 조선 \"금융위기 후 최악\" 미디어오늘 2시간 전\n",
+      "트럼프발 주가폭락에 동아 \"경제적 핵전쟁\" 조선 \"금융위기 후 최악\"\n",
+      "https://v.daum.net/v/20250408160526681\n",
+      "공황과 격변의 판도라 박스가 열리다\n",
       "\n",
       "=====>https://news.daum.net/climate 기후/환경뉴스<=====\n",
       "https://v.daum.net/v/20250408170301976\n",
-      "가습기살균제 피해자와 유족, 가해부처 환경부 규탄 성명 발표 [이인우 기자] 가습기살균제 간질성폐질환 피해유족과 피해자단체가 2025년 4월 8일, 환경부를 강하게 규탄하는 성명서를 발표하며 정부의 무책임한 태도와 거짓 해명에 분노를 표출했습니다. 이들은 환경부가 피해자들의 절박한 목소리를 외면하고, 실효성 없는 대책으로 일관하며 14년째 고통을 가중시키고 있다고 비판했습니다. 성명서에 따르면, 환경부는 전체 피해자 오마이뉴스 1시간 전\n",
+      "가습기살균제 피해자와 유족, 가해부처 환경부 규탄 성명 발표\n",
       "https://v.daum.net/v/20250408170002845\n",
-      "민주당 을지로위원회 중재로 ‘일회용컵 보증금제’ 철회 피해업체 구제 매일경제 1시간 전\n",
+      "민주당 을지로위원회 중재로 ‘일회용컵 보증금제’ 철회 피해업체 구제\n",
       "https://v.daum.net/v/20250408165802774\n",
-      "산불 복구 현장 가보니…인위적으로 베어내 굽이굽이 ‘민둥산’ 한겨레21 1시간 전\n",
+      "산불 복구 현장 가보니…인위적으로 베어내 굽이굽이 ‘민둥산’\n",
       "https://v.daum.net/v/20250408143901395\n",
-      "동영상     \"30년만에 갑자기?\" 창원시 뜬금없는 소각장 공동입찰 논란 오마이뉴스 4시간 전\n",
-      "https://v.daum.net/v/20250408124815485\n",
-      "동영상     [기후는 말한다] 4월인데 AI 확산…“겨울처럼 방역” KBS 5시간 전\n",
+      "\"30년만에 갑자기?\" 창원시 뜬금없는 소각장 공동입찰 논란\n",
       "https://v.daum.net/v/20250408124406370\n",
-      "동영상     [기후는 말한다] 유엔 “코로나19 당시 북한 영유아 사망률 악화” KBS 5시간 전\n",
+      "[기후는 말한다] 유엔 “코로나19 당시 북한 영유아 사망률 악화”\n",
       "https://v.daum.net/v/20250408121002752\n",
-      "유럽도 ‘가장 뜨거운’ 3월…북극 해빙면적 4개월째 ‘역대 최저’ 한겨레 6시간 전\n",
+      "유럽도 ‘가장 뜨거운’ 3월…북극 해빙면적 4개월째 ‘역대 최저’\n",
       "https://v.daum.net/v/20250408120401610\n",
-      "전 세계 재생에너지 비중 32%, 우린 고작 10% [지금은 기후위기] 아이뉴스24 6시간 전\n",
+      "전 세계 재생에너지 비중 32%, 우린 고작 10% [지금은 기후위기]\n",
       "https://v.daum.net/v/20250408111801392\n",
-      "맨발과 흙이 만나니…아킬레스건염도 훨훨 한겨레21 7시간 전\n",
+      "맨발과 흙이 만나니…아킬레스건염도 훨훨\n",
+      "https://v.daum.net/v/20250408110037410\n",
+      "[르포]산불 진화요원의 한숨 \"80년 된 나무가 죽었네요…헬기만 있었어도\"\n",
       "\n"
      ]
     }
@@ -182,55 +176,52 @@
     "    \"IT/과학\": \"tech\",\n",
     "    \"인물\": \"people\",\n",
     "}\n",
-    "def print_news(sid):  # print_new(103)\n",
+    "\n",
+    "\n",
+    "def print_news(sid): \n",
     "    section = section_dict[sid]\n",
     "    req_param = {\"sid\": section}\n",
     "\n",
-    "\n",
-    "    url = \"https://news.daum.net/{sid}\".format(**req_param)  # 딕셔너리 넣을땐 앞에 **추가\n",
-    "    print(f'=====>{url} {sid}뉴스<=====')\n",
+    "    url = \"https://news.daum.net/{sid}\".format(\n",
+    "        **req_param\n",
+    "    )  # 딕셔너리 넣을땐 앞에 **추가\n",
+    "    print(f\"=====>{url} {sid}뉴스<=====\")\n",
     "\n",
     "    # url2 = 'https://news.daum.net/economy'\n",
     "\n",
-    "    #요청 헤더 설정 : 브라우저 정보 (사람처럼 보이게 하려고 설정하는 것임)\n",
+    "    # 요청 헤더 설정 : 브라우저 정보 (사람처럼 보이게 하려고 설정하는 것임)\n",
     "    req_header = {\n",
     "        \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36\"\n",
     "    }\n",
     "\n",
     "    # requests 의 get() 함수 호출하기\n",
     "    res = requests.get(url, headers=req_header)\n",
-    "    res.encoding = 'utf-8'\n",
+    "    res.encoding = \"utf-8\"\n",
     "    # 응답(response)이 OK 이면\n",
     "    if res.ok:\n",
-    "            # 응답 (response)에서 text 추출 - source 보기\n",
-    "            html = res.text\n",
-    "            # print(html)\n",
-    "            # BeautifulSoup 객체 생성  \n",
-    "            soup = BeautifulSoup(html, 'html.parser')\n",
-    "            #print(soup)\n",
-    "            \n",
-    "            # CSS 선택자\n",
-    "            \n",
-    "            #print(len(soup.select(\"ul.list_newsheadline2 li a[href*='daum.net/v']\")))\n",
-    "            \n",
-    "            a_tag_list = soup.select(\"ul.list_newsheadline2 li a[href*='daum.net/v']\")\n",
-    "            #print(type(a_tag_list)) # [<a href =\"http://\">뉴스제목</a>] ResultSet객체 , <a></a> : Tag 객체\n",
-    "            #print(a_tag_list) #[<a></a>,<a></a>]\n",
-    "            for a_tag in a_tag_list:\n",
-    "                #print(type(a_tag))\n",
-    "                title = a_tag.text.strip() #strip() 공백을 제거하는 함수\n",
-    "                link = a_tag['href']   #herf 속성의 값을 가져온ㄷ나\n",
-    "                print(link)\n",
-    "                print(title) \n",
-    "            print()\n",
-    "            \n",
+    "        # 응답 (response)에서 text 추출 - source 보기\n",
+    "        html = res.text\n",
+    "\n",
+    "        # BeautifulSoup 객체 생성\n",
+    "        soup = BeautifulSoup(html, \"html.parser\")\n",
+    "\n",
+    "        li_tag_list = soup.select(\"ul.list_newsheadline2 li\")\n",
+    "\n",
+    "        for li_tag in li_tag_list:\n",
+    "            a_tag = li_tag.find(\"a\")\n",
+    "            title = li_tag.select_one(\"div.cont_thumb  strong.tit_txt\").text.strip()  # strip() 공백을 제거하는 함수\n",
+    "            link = a_tag[\"href\"]  # href 속성의 값을 가져온ㄷ나\n",
+    "            print(link)\n",
+    "            print(title)\n",
+    "        print()\n",
+    "\n",
     "    else:\n",
-    "        # 응답(response)이 Error 이면 status code 출력 \n",
-    "        print(f'에러 코드 = {res.status_code}')\n",
-    "        \n",
-    "        \n",
-    "print_news('경제')\n",
-    "print_news('기후/환경')"
+    "        # 응답(response)이 Error 이면 status code 출력\n",
+    "        print(f\"에러 코드 = {res.status_code}\")\n",
+    "\n",
+    "\n",
+    "print_news(\"경제\")\n",
+    "print_news(\"기후/환경\")"
    ]
   }
  ],
