--- a/00python_basic.ipynb
+++ b/00python_basic.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c28dbac3-9aad-4a62-84a7-8369e27bdb96",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,9 @@
      "output_type": "stream",
      "text": [
       "{'name': '파이썬', 'addr': '서울'}\n",
-      "파이썬\n"
+      "파이썬\n",
+      "요청하신 Key가 없습니다.\n",
+      "요청하신 Key가 없습니다.\n"
      ]
     }
    ],
@@ -178,12 +180,20 @@
     "# addr item 추가\n",
     "my_dict['addr'] = '서울'       #[key] = value \n",
     "print(my_dict)\n",
-    "print(my_dict['name'])"
+    "print(my_dict['name'])\n",
+    "#print(my_dict['name2'])  #<< 에러발생\n",
+    "val = my_dict.get('name2')\n",
+    "if val:\n",
+    "    print(val)\n",
+    "else:\n",
+    "    print('요청하신 Key가 없습니다.') \n",
+    "if val is None:\n",
+    "    print('요청하신 Key가 없습니다.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "8a98e9cc-1318-411c-8073-77684d389b15",
    "metadata": {},
    "outputs": [
