--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c72d6cb1",
    "metadata": {},
    "outputs": [
@@ -464,12 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n",
-      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299,319 bytes)\n",
-      "200\n",
-      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163,333 bytes)\n",
-      "200\n",
-      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182,530 bytes)\n"
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299319 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163333 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182530 bytes)\n"
      ]
     }
    ],
@@ -478,24 +475,28 @@
     "import os\n",
     "\n",
     "req_header = {\n",
-    "    'referer':''\n",
+    "    'referer': 'https://comic.naver.com/webtoon/detail?titleId=798173&no=5&amp;weekday=thu'\n",
     "}\n",
     "\n",
     "img_urls = [\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg',\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg',\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg'\n",
-    "]\n",
+    "]                                          # 주소명< / > 파일명\n",
     "\n",
     "for img_url in img_urls:\n",
-    "    pass\n",
-    "    # requests 의 get(url, headers) 함수 호출하기 \n",
-    "        \n",
-    "        # binary 응답 데이터 가져오기\n",
-    "        \n",
-    "        # url에서 파일명만 추출하기\n",
-    "        \n",
-    "        # binday data를 file에 write하기\n"
+    "     # requests 의 get(url, headers) 함수 호출하기 \n",
+    "    res = requests.get(img_url, headers=req_header)  #요청 headers를 주지 않는다면 \n",
+    "    if res.ok:    \n",
+    "        # binary 응답 데이터 가져오기 content 프로퍼티를 사용한다\n",
+    "        img_data = res.content\n",
+    "        # url에서 파일명만 추출하기 \n",
+    "        file_name = os.path.basename(img_url)\n",
+    "        #print(file_name)\n",
+    "        # binday data를 file에 write하기\n",
+    "        with open(file_name,'wb') as file :\n",
+    "            print(f'Writing to {file_name}({len(img_data)} bytes)')\n",
+    "            file.write(img_data)"
    ]
   },
   {
