--- a/연습문제/01_news_scraping.ipynb
+++ b/연습문제/01_news_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "51ed56fb",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "4673d08e",
    "metadata": {},
    "outputs": [
@@ -123,44 +123,44 @@
      "output_type": "stream",
      "text": [
       "=====>https://news.daum.net/economy 경제뉴스<=====\n",
-      "https://v.daum.net/v/20250408184905360\n",
-      "‘관세 직격탄’ 애플 주가 19% ‘뚝’… 갈수록 커지는 ‘T공포’ [관세전쟁 후폭풍]\n",
-      "https://v.daum.net/v/20250408183514025\n",
-      "미·중 치킨게임…원화값 1473원대 추락, 글로벌 금융위기 후 최저\n",
-      "https://v.daum.net/v/20250408175343664\n",
-      "美·中 관세 폭탄 돌리기…‘새우등’ 한국 경제 불안감 더 커졌다\n",
-      "https://v.daum.net/v/20250408175111585\n",
-      "나랏빚 1175조 '역대 최대'…추경 재원 바닥\n",
-      "https://v.daum.net/v/20250408174344325\n",
-      "메디젠휴먼케어, \"23andMe 파산..한국 유전체 산업의 위기 아닌 기회\"\n",
-      "https://v.daum.net/v/20250408173713085\n",
-      "칩 확보서 데이터센터까지···전 산업에 'AI 고속도로' 깔아야\n",
-      "https://v.daum.net/v/20250408173626057\n",
-      "77년 묵은 정부조직, 데이터 중심 대수술···'AI 부총리' 도입을\n",
-      "https://v.daum.net/v/20250408161553109\n",
-      "트럼프발 주가폭락에 동아 \"경제적 핵전쟁\" 조선 \"금융위기 후 최악\"\n",
-      "https://v.daum.net/v/20250408160526681\n",
-      "공황과 격변의 판도라 박스가 열리다\n",
+      "https://v.daum.net/v/20250409100338422\n",
+      "기름 넣을 때마다 내는 세금, 적절한 곳에 쓰고 있나요? [질문+]\n",
+      "https://v.daum.net/v/20250409100040256\n",
+      "'원금지급·초과수익' 첫 IMA 연내지정…한국판 골드만삭스 시동\n",
+      "https://v.daum.net/v/20250409100011190\n",
+      "'원금지급' IMA 제도, 8년 만에 구체화…하반기에 8조 종투사 지정\n",
+      "https://v.daum.net/v/20250409095612972\n",
+      "회사는 주주만의 것? 상법 개정이 품은 위험\n",
+      "https://v.daum.net/v/20250409095604965\n",
+      "발의자가 설명하는 ‘상법 왜 바꿨나’\n",
+      "https://v.daum.net/v/20250409095558958\n",
+      "K밸류업 외치는 사이, 무너지는 한국 제조업\n",
+      "https://v.daum.net/v/20250409095110733\n",
+      "[친절한 경제] 초고령 사회 진입…'정년 연장'보다 필요한 근로 형태는?\n",
+      "https://v.daum.net/v/20250409094730569\n",
+      "3월 취업자 19.3만 늘었지만…청년·건설·제조업 '고용한파' 지속(종합)\n",
+      "https://v.daum.net/v/20250409091935326\n",
+      "‘회복’이라는 착시.. “청년은 떠났고, 일터는 비어 있다”\n",
       "\n",
       "=====>https://news.daum.net/climate 기후/환경뉴스<=====\n",
+      "https://v.daum.net/v/20250409100322411\n",
+      "'친환경 자동차 기반 넷제로 시티 실증사업' 순조\n",
+      "https://v.daum.net/v/20250409093601073\n",
+      "차기정부에 바란다, 기후위기 대응은 곧 민생대책\n",
+      "https://v.daum.net/v/20250409090119504\n",
+      "고기연 산불학회장 “기후변화로 연중 산불 나고, 났다 하면 대형 산불로 번지는 추세”\n",
+      "https://v.daum.net/v/20250409085813309\n",
+      "경기도, 22일 지구의 날 앞두고 기후 행동 문화 확산 나선다\n",
+      "https://v.daum.net/v/20250409072307093\n",
+      "노원구, 탄소중립 달성 위해 전세계 지방정부 협력 추진\n",
+      "https://v.daum.net/v/20250409030535031\n",
+      "[초대석]“환경시설에 첨단기술 적용… 저탄소 녹색도시로 도약”\n",
+      "https://v.daum.net/v/20250408231214084\n",
+      "‘괴물 산불’ 국립공원에도 최악 상흔… 공단 헬기는 고작 1대 뿐\n",
+      "https://v.daum.net/v/20250408211405869\n",
+      "지구 온난화·4대강 사업으로 겨울에도 녹조 발생···환경부는 '침묵'\n",
       "https://v.daum.net/v/20250408170301976\n",
       "가습기살균제 피해자와 유족, 가해부처 환경부 규탄 성명 발표\n",
-      "https://v.daum.net/v/20250408170002845\n",
-      "민주당 을지로위원회 중재로 ‘일회용컵 보증금제’ 철회 피해업체 구제\n",
-      "https://v.daum.net/v/20250408165802774\n",
-      "산불 복구 현장 가보니…인위적으로 베어내 굽이굽이 ‘민둥산’\n",
-      "https://v.daum.net/v/20250408143901395\n",
-      "\"30년만에 갑자기?\" 창원시 뜬금없는 소각장 공동입찰 논란\n",
-      "https://v.daum.net/v/20250408124406370\n",
-      "[기후는 말한다] 유엔 “코로나19 당시 북한 영유아 사망률 악화”\n",
-      "https://v.daum.net/v/20250408121002752\n",
-      "유럽도 ‘가장 뜨거운’ 3월…북극 해빙면적 4개월째 ‘역대 최저’\n",
-      "https://v.daum.net/v/20250408120401610\n",
-      "전 세계 재생에너지 비중 32%, 우린 고작 10% [지금은 기후위기]\n",
-      "https://v.daum.net/v/20250408111801392\n",
-      "맨발과 흙이 만나니…아킬레스건염도 훨훨\n",
-      "https://v.daum.net/v/20250408110037410\n",
-      "[르포]산불 진화요원의 한숨 \"80년 된 나무가 죽었네요…헬기만 있었어도\"\n",
       "\n"
      ]
     }
