--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c72d6cb1",
    "metadata": {},
    "outputs": [
@@ -464,9 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299319 bytes)\n",
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163333 bytes)\n",
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182530 bytes)\n"
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299,319 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163,333 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182,530 bytes)\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
     "        #print(file_name)\n",
     "        # binday data를 file에 write하기\n",
     "        with open(file_name,'wb') as file :\n",
-    "            print(f'Writing to {file_name}({len(img_data)} bytes)')\n",
+    "            print(f'Writing to {file_name}({len(img_data):,} bytes)')\n",
     "            file.write(img_data)"
    ]
   },
