현재 요청된 페이지의 image 모두 다운로드 해보기

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -509,11 +509,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b30f7bf5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n",
+      "71\n",
+      "71\n",
+      "<img alt=\"comic content\" id=\"content_image_0\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_1.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_1\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_2.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_2\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_3.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_3\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_4.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_4\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_5.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_5\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_6.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_6\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_7.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_7\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_8.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_8\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_9.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_9\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_10.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_10\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_11.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_11\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_12.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_12\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_13.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_13\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_14.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_14\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_15.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_15\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_16.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_16\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_17.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_17\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_18.jpg\"/>\n",
+      "<img alt=\"comic content\" id=\"content_image_18\" src=\"https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_19.jpg\"/>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'https://comic.naver.com/webtoon/detail?titleId=833255&no=35&week=tue'\n",
+    "req_header = {\n",
+    "    'referer' : url\n",
+    "}\n",
+    "res = requests.get(url)\n",
+    "if res.ok: \n",
+    "    #jpg 파일의 절대경로 url를 찾기 \n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    print(len(soup.select(\"img[src*='IMAG01']\"))) # \"  '' \"\n",
+    "    print(len(soup.select(\"img[src$='.jpg']\"))) \n",
+    "    print(len(soup.select(\"img[src^='https://image-comic']\")))\n",
+    "    \n",
+    "    img_tags = soup.select(\"img[src*='IMAG01']\")\n",
+    "    for img_tag in img_tags : \n",
+    "        print(img_tag)\n",
+    "    \n",
+    "else:\n",
+    "    print(f'Error Code = {res.status_code}')\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
