--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "b30f7bf5",
    "metadata": {},
    "outputs": [
@@ -520,13 +520,18 @@
       "19\n",
       "71\n",
       "71\n",
-      "19 ['https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_1.jpg', 'https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_2.jpg']\n"
+      "19 ['https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_1.jpg', 'https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_2.jpg']\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299,319 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163,333 bytes)\n",
+      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182,530 bytes)\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import os\n",
+    "\n",
     "\n",
     "url = 'https://comic.naver.com/webtoon/detail?titleId=833255&no=35&week=tue'\n",
     "req_header = {\n",
@@ -547,7 +552,27 @@
     "        img_src = img_tag['src']\n",
     "        img_url_list.append(img_src)\n",
     "    print(len(img_url_list), img_url_list[0:2])\n",
-    "        \n",
+    "    \n",
+    "    #img 디렉토리 생성하기\n",
+    "    imgdir_name = 'img'\n",
+    "    #img 디렉토리가 *없으면* 생성하기 \n",
+    "    if not os.path.isdir(imgdir_name):\n",
+    "        os.mkdir(imgdir_name)                #       mkdir : 디렉토리 1개생성        makedirs: 서브디렉토리까지 생성할때 \n",
+    "    for img_url in img_urls:\n",
+    "     # requests 의 get(url, headers) 함수 호출하기 \n",
+    "         res = requests.get(img_url, headers=req_header)  #요청 headers를 주지 않는다면 \n",
+    "         if res.ok:    \n",
+    "          # binary 응답 데이터 가져오기 content 프로퍼티를 사용한다\n",
+    "            img_data = res.content\n",
+    "            # url에서 파일명만 추출하기 \n",
+    "            file_name = os.path.basename(img_url)\n",
+    "            #print(file_name)\n",
+    "            # binday data를 file에 write하기\n",
+    "            file_path = os.path.join(\"img\", file_name)\n",
+    "            with open(file_path,'wb') as file :\n",
+    "                \n",
+    "                print(f'Writing to {file_name}({len(img_data):,} bytes)')\n",
+    "                file.write(img_data)\n",
     "else:\n",
     "    print(f'Error Code = {res.status_code}')\n",
     "\n",
