--- a/연습문제/01_news_scraping.ipynb
+++ b/연습문제/01_news_scraping.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "4673d08e",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     "    \"사회\": \"society\",\n",
     "    \"경제\": \"economy\",\n",
     "    \"정치\": \"politics\",\n",
-    "    \"국재\": \"world\",\n",
+    "    \"국제\": \"world\",\n",
     "    \"문화\": \"culture\",\n",
     "    \"생활\": \"life\",\n",
     "    \"IT/과학\": \"tech\",\n",
@@ -224,6 +224,101 @@
     "print_news(\"경제\")\n",
     "print_news(\"기후/환경\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "004791e4",
+   "metadata": {},
+   "source": [
+    "#강사님 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "af1a548f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======> https://news.daum.net/climate 기후/환경 뉴스 <======\n",
+      "https://v.daum.net/v/20250409111105152\n",
+      "전남도,친환경 자동차 기반 넷제로 시티 실증사업 온힘\n",
+      "https://v.daum.net/v/20250409103854225\n",
+      "'깨끗하고 푸른 뉴질랜드?'…옛말되나 [지금은 기후위기]\n",
+      "https://v.daum.net/v/20250409102101213\n",
+      "모래강 내성천에서 모래 파내겠다니... 환경부 문 닫아야 할 일\n",
+      "https://v.daum.net/v/20250409093601073\n",
+      "차기정부에 바란다, 기후위기 대응은 곧 민생대책\n",
+      "https://v.daum.net/v/20250409090119504\n",
+      "고기연 산불학회장 “기후변화로 연중 산불 나고, 났다 하면 대형 산불로 번지는 추세”\n",
+      "https://v.daum.net/v/20250409085813309\n",
+      "경기도, 22일 지구의 날 앞두고 기후 행동 문화 확산 나선다\n",
+      "https://v.daum.net/v/20250409030535031\n",
+      "[초대석]“환경시설에 첨단기술 적용… 저탄소 녹색도시로 도약”\n",
+      "https://v.daum.net/v/20250408231214084\n",
+      "‘괴물 산불’ 국립공원에도 최악 상흔… 공단 헬기는 고작 1대 뿐\n",
+      "https://v.daum.net/v/20250408211405869\n",
+      "지구 온난화·4대강 사업으로 겨울에도 녹조 발생···환경부는 '침묵'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def print_news(section_name):    \n",
+    "    #section = section_dict[section_name]\n",
+    "    section = section_dict.get(section_name)\n",
+    "    if section is None:\n",
+    "        print('요청하신 Key가 없습니다.')\n",
+    "    else:    \n",
+    "        # 요청 Parameter\n",
+    "        req_param = {\n",
+    "            'section': section\n",
+    "        }\n",
+    "        url = 'https://news.daum.net/{section}'.format(**req_param)\n",
+    "        \n",
+    "        print(f'======> {url} {section_name} 뉴스 <======')\n",
+    "        \n",
+    "        # 요청 헤더 설정 : 브라우저 정보\n",
+    "        req_header = {\n",
+    "            'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36'\n",
+    "        }\n",
+    "\n",
+    "        res = requests.get(url, headers=req_header)   \n",
+    "\n",
+    "        if res.ok:\n",
+    "            res.encoding = 'utf-8' \n",
+    "            html = res.text\n",
+    "            soup = BeautifulSoup(html, 'html.parser')\n",
+    "            \n",
+    "            # 기사 제목과 링크 추출\n",
+    "            li_tag_list = soup.select('ul.list_newsheadline2 li')\n",
+    "\n",
+    "            #print(type(li_tag_list), len(li_tag_list))\n",
+    "\n",
+    "            for li_tag in li_tag_list:        \n",
+    "                a_tag = li_tag.find('a')\n",
+    "                print(a_tag['href'])\n",
+    "                \n",
+    "                strong_tag = li_tag.select_one('div.cont_thumb strong.tit_txt')\n",
+    "                title = strong_tag.text.strip()\n",
+    "                print(title)\n",
+    "\n",
+    "        else:\n",
+    "            print(f'에러코드 = {res.status_code}')\n",
+    "            \n",
+    "print_news('기후/환경')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9780f54",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
