--- a/00python_basic.ipynb
+++ b/00python_basic.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "5f76b65d",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "'56,784,949,494'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "96c5339d",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "'24737.12'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ff0e36be",
    "metadata": {},
    "outputs": [
@@ -367,18 +367,18 @@
        "['H', 'e', 'l', 'l', 'o']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'H e l l o'.split(' ')"
+    "'H e l l o'.split(' ') # str -> list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "6977bc66",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ba15038b",
    "metadata": {},
    "outputs": [
@@ -402,16 +402,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23\n",
-      "17\n"
+      "23\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Yesterday all my troubles seemed so far away.',\n",
+       " \"Now it looks as though they're here to stay.\",\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " '',\n",
+       " \"Suddenly I'm not half the man I used to be.\",\n",
+       " \"There's a shadow hanging over me.\",\n",
+       " 'Oh, yesterday came suddenly.',\n",
+       " '',\n",
+       " \"Why she had to go, I don't know, she wouldn't say.\",\n",
+       " 'I said something wrong, now I long for yesterday.',\n",
+       " '',\n",
+       " 'Yesterday love was such an easy game to play.',\n",
+       " 'Now I need a place to hide away.',\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " '',\n",
+       " \"Why she had to go, I don't know, she wouldn't say.\",\n",
+       " 'I said something wrong, now I long for yesterday.',\n",
+       " '',\n",
+       " 'Yesterday love was such an easy game to play.',\n",
+       " 'Now I need a place to hide away.',\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " '',\n",
+       " 'Mm mm mm mm mm mm mm']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lyric_list = get_text_list()\n",
     "print(len(lyric_list))\n",
+    "#lyric_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8897f26c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Yesterday all my troubles seemed so far away.',\n",
+       " \"Now it looks as though they're here to stay.\",\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " \"Suddenly I'm not half the man I used to be.\",\n",
+       " \"There's a shadow hanging over me.\",\n",
+       " 'Oh, yesterday came suddenly.',\n",
+       " \"Why she had to go, I don't know, she wouldn't say.\",\n",
+       " 'I said something wrong, now I long for yesterday.',\n",
+       " 'Yesterday love was such an easy game to play.',\n",
+       " 'Now I need a place to hide away.',\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " \"Why she had to go, I don't know, she wouldn't say.\",\n",
+       " 'I said something wrong, now I long for yesterday.',\n",
+       " 'Yesterday love was such an easy game to play.',\n",
+       " 'Now I need a place to hide away.',\n",
+       " 'Oh, I believe in yesterday.',\n",
+       " 'Mm mm mm mm mm mm mm']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list comprehension\n",
     "lyric_list2 = [lyric for lyric in lyric_list if len(lyric) != 0]\n",
-    "print(len(lyric_list2))"
+    "print(len(lyric_list2))\n",
+    "#lyric_list2"
    ]
   },
   {
