--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "b30f7bf5",
    "metadata": {},
    "outputs": [
@@ -520,9 +520,25 @@
       "71\n",
       "71\n",
       "19 ['https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_1.jpg', 'https://image-comic.pstatic.net/webtoon/833255/35/20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_2.jpg']\n",
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg(299,319 bytes)\n",
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg(163,333 bytes)\n",
-      "Writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg(182,530 bytes)\n"
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_1.jpg(164,626 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_2.jpg(90,246 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_3.jpg(123,558 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_4.jpg(144,941 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_5.jpg(183,258 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_6.jpg(148,153 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_7.jpg(149,937 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_8.jpg(83,666 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_9.jpg(180,487 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_10.jpg(119,614 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_11.jpg(132,312 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_12.jpg(136,409 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_13.jpg(112,248 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_14.jpg(159,837 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_15.jpg(168,735 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_16.jpg(73,730 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_17.jpg(182,584 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_18.jpg(86,921 bytes)\n",
+      "writing to img\\20250107185236_7c4b279b6b7816fb2920b82077a98786_IMAG01_19.jpg(8,717 bytes)\n"
      ]
     }
    ],
@@ -531,51 +547,49 @@
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "\n",
-    "\n",
     "url = 'https://comic.naver.com/webtoon/detail?titleId=833255&no=35&week=tue'\n",
     "req_header = {\n",
-    "    'referer' : url\n",
+    "    'referer': url\n",
     "}\n",
     "res = requests.get(url)\n",
-    "if res.ok: \n",
-    "    #jpg 파일의 절대경로 url를 찾기 \n",
+    "if res.ok:\n",
+    "    # jpg 파일의 절대경로 url를 찾기\n",
     "    soup = BeautifulSoup(res.text, 'html.parser')\n",
-    "    print(len(soup.select(\"img[src*='IMAG01']\"))) # \"  '' \"    # *=~~ ~~가 포함된된\n",
-    "    print(len(soup.select(\"img[src$='.jpg']\")))                # %=~~ ~~로 끝나는\n",
-    "    print(len(soup.select(\"img[src^='https://image-comic']\"))) # ^=~~ ~~로 시작되는\n",
+    "    print(len(soup.select(\"img[src*='IMAG01']\"))) #19\n",
+    "    print(len(soup.select(\"img[src$='.jpg']\"))) #71\n",
+    "    print(len(soup.select(\"img[src^='https://image-comic']\"))) #71\n",
     "    \n",
     "    img_tags = soup.select(\"img[src*='IMAG01']\")\n",
-    "    img_url_list = list()  # ['aa.jpg', 'aa1.jpg']\n",
-    "    for img_tag in img_tags : \n",
+    "    # img src 를 저장할 list 선언\n",
+    "    img_url_list = list() # ['aa.jpg','aa1.jpg']\n",
+    "    for img_tag in img_tags:\n",
     "        #print(type(img_tag), img_tag.name, img_tag)\n",
     "        img_src = img_tag['src']\n",
     "        img_url_list.append(img_src)\n",
-    "    print(len(img_url_list), img_url_list[0:2])\n",
+    "    print(len(img_url_list), img_url_list[:2]) \n",
     "    \n",
-    "    #img 디렉토리 생성하기\n",
+    "    #img 디렉토리가 없으면 생성하기   \n",
     "    imgdir_name = 'img'\n",
-    "    #img 디렉토리가 *없으면* 생성하기 \n",
     "    if not os.path.isdir(imgdir_name):\n",
-    "        os.mkdir(imgdir_name)                #       mkdir : 디렉토리 1개생성        makedirs: 서브디렉토리까지 생성할때 \n",
-    "    for img_url in img_urls:\n",
-    "     # requests 의 get(url, headers) 함수 호출하기 \n",
-    "         res = requests.get(img_url, headers=req_header)  #요청 headers를 주지 않는다면 \n",
-    "         if res.ok:    \n",
-    "          # binary 응답 데이터 가져오기 content 프로퍼티를 사용한다\n",
+    "        os.mkdir(imgdir_name)\n",
+    "        \n",
+    "    #os.path.join(dir,file) 함수 사용하여 디렉토리명과 파일명 합치기\n",
+    "    for img_url in img_url_list:\n",
+    "        res = requests.get(img_url, headers=req_header)\n",
+    "        if res.ok:        \n",
+    "            # binary data 가져오기\n",
     "            img_data = res.content\n",
-    "            # url에서 파일명만 추출하기 \n",
-    "            file_name = os.path.basename(img_url)\n",
-    "            #print(file_name)\n",
+    "            # img/xxx.jpg 디렉토리명과 파일명을 join\n",
+    "            dir_name = os.path.join(imgdir_name, os.path.basename(img_url))\n",
     "            # binday data를 file에 write하기\n",
-    "            file_path = os.path.join(\"img\", file_name)\n",
-    "            with open(file_path,'wb') as file :\n",
-    "                \n",
-    "                print(f'Writing to {file_name}({len(img_data):,} bytes)')\n",
+    "            with open(dir_name,'wb') as file:\n",
+    "                print(f'writing to {dir_name}({len(img_data):,} bytes)')\n",
     "                file.write(img_data)\n",
+    "        else:\n",
+    "            print(f'Error Code = {res.status_code}')      \n",
+    "            \n",
     "else:\n",
-    "    print(f'Error Code = {res.status_code}')\n",
-    "\n",
-    "\n"
+    "    print(f'Error Code = {res.status_code}')"
    ]
   },
   {
@@ -588,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "553b2b99",
    "metadata": {},
    "outputs": [
@@ -847,8 +861,16 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "a056f65a",
+   "metadata": {},
+   "source": [
+    "실행 순서는 캡차 키 발급 > 발급 내용 복사{env에 넣기(선택)} > 커널 재시작 (env 파일내용을 새로 저장하기 위함) > 나머지 진행 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "727b427b",
    "metadata": {
     "scrolled": true
@@ -858,13 +880,140 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error Code: 403\n"
+      "{\"key\":\"gJyHr15jRPni3rjj\"}\n"
      ]
     }
    ],
    "source": [
-    "# 사용자 입력값 검증 요청\n",
-    "\n"
+    "# 캡차 키 발급 요청\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "\n",
+    "# .env 파일에서 환경 변수 로드\n",
+    "load_dotenv()\n",
+    "\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\")  # .env 파일의 NAVER_CLIENT_ID 값\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\")  # .env 파일의 NAVER_CLIENT_SECRET 값\n",
+    "code = \"0\"\n",
+    "\n",
+    "url = f\"https://openapi.naver.com/v1/captcha/nkey?code={code}\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"X-Naver-Client-Id\": client_id,\n",
+    "    \"X-Naver-Client-Secret\": client_secret\n",
+    "}\n",
+    "\n",
+    "# 요청 보내기\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "# 응답 처리\n",
+    "if response.status_code == 200:\n",
+    "    print(response.text)\n",
+    "else:\n",
+    "    print(f\"Error Code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7c34990c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "캡차 이미지 저장\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 캡차 이미지 요청\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "\n",
+    "# .env 파일에서 환경 변수 로드\n",
+    "load_dotenv()\n",
+    "\n",
+    "# 환경 변수에서 값 읽기\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\")  # .env 파일의 NAVER_CLIENT_ID\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\")  # .env 파일의 NAVER_CLIENT_SECRET\n",
+    "key = os.getenv(\"NAVER_CAPTCHA_KEY\")  # .env 파일의 NAVER_CAPTCHA_KEY\n",
+    "\n",
+    "url = f\"https://openapi.naver.com/v1/captcha/ncaptcha.bin?key={key}\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"X-Naver-Client-Id\": client_id,\n",
+    "    \"X-Naver-Client-Secret\": client_secret\n",
+    "}\n",
+    "\n",
+    "# 요청 보내기\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "# 응답 처리\n",
+    "if response.status_code == 200:\n",
+    "    print(\"캡차 이미지 저장\")\n",
+    "    with open('captcha.jpg', 'wb') as f:\n",
+    "        f.write(response.content)\n",
+    "else:\n",
+    "    print(f\"Error Code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5945863c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"result\":true,\"responseTime\":61.88}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 사용자 입력값 검증 요청 \n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "\n",
+    "# .env 파일에서 환경 변수 로드\n",
+    "load_dotenv()\n",
+    "\n",
+    "# 환경 변수에서 값 읽기\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\")  # .env 파일의 NAVER_CLIENT_ID\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\")  # .env 파일의 NAVER_CLIENT_SECRET\n",
+    "key = os.getenv(\"NAVER_CAPTCHA_KEY\")  # .env 파일의 NAVER_CAPTCHA_KEY\n",
+    "\n",
+    "# 사용자 입력값\n",
+    "code = \"1\"\n",
+    "value = \"385P\"  # 실제 사용시 사용자 입력값으로 대체 필요\n",
+    "\n",
+    "# URL 구성\n",
+    "                                     #          ? 는 query string 형식 : key={value}&key={value}&key={value}   \n",
+    "url = f\"https://openapi.naver.com/v1/captcha/nkey?code={code}&key={key}&value={value}\"\n",
+    "\n",
+    "# 요청 헤더\n",
+    "headers = {\n",
+    "    \"X-Naver-Client-Id\": client_id,\n",
+    "    \"X-Naver-Client-Secret\": client_secret\n",
+    "}\n",
+    "\n",
+    "# 요청 보내기\n",
+    "try:\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    response.raise_for_status()  # 4xx, 5xx 오류 발생시 예외 발생\n",
+    "    \n",
+    "    # 응답 처리\n",
+    "    print(response.text)\n",
+    "    \n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(f\"Error occurred: {e}\")\n",
+    "    print(f\"Status Code: {response.status_code if 'response' in locals() else 'N/A'}\")\n"
    ]
   },
   {
@@ -877,34 +1026,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "877d0c7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['대구<b>파이썬</b>학원 실전 기술 익힌 곳', '▶ 제이의 맛있는 세상 ◀', '그때 힘이 되어 준 대구<b>파이썬</b>학원에 대한 글을 써보려 해요! IT 위주로 학습하는 곳 단순히 구직에... 이 대구<b>파이썬</b>학원은 전직, 현직 강사들이 비전공자도 따라갈 수 있을 정도로 눈높이 교육을 진행해 준다고... ', 'blog.naver.com/xshinerx', 'https://blog.naver.com/xshinerx/223787876858'], ['대전자바학원 <b>파이썬</b> 앱개발 공부하고 취업까지', '반짝반짝 너와 나', '저는 <b>파이썬</b>부터 시작해 백엔드 개발에 필요한 다양한 과정을 배우기로 결정했어요. <b>파이썬</b>은 최근 많은 사람들이 주목하고 인기 있는 프로그래밍 언어로 특히 생성 AI 앱을 구축하고 싶다면 필수인 언어였고... ', 'blog.naver.com/mamansiri', 'https://blog.naver.com/mamansiri/223750243246']]\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "import requests\n",
     "import pprint\n",
     "\n",
-    "headers = {\n",
-    "    'X-Naver-Client-Id': '',\n",
-    "    'X-Naver-Client-Secret': '',\n",
-    "}\n",
+    "# .env 파일에서 환경 변수 로드\n",
+    "load_dotenv()\n",
     "\n",
+    "# 환경 변수에서 값 읽기\n",
+    "client_id = os.getenv(\"NAVER_CLIENT_ID\")  # .env 파일의 NAVER_CLIENT_ID\n",
+    "client_secret = os.getenv(\"NAVER_CLIENT_SECRET\")  # .env 파일의 NAVER_CLIENT_SECRET\n",
+    "\n",
+    "headers = {\n",
+    "    'X-Naver-Client-Id': client_id,\n",
+    "    'X-Naver-Client-Secret': client_secret,\n",
+    "}\n",
+    "# query string 문자열을 dict 선언\n",
     "payload = {\n",
     "    'query': '파이썬',\n",
     "    'display': 100,\n",
     "    'sort': 'sim'\n",
     "}\n",
     "\n",
-    "url = 'https://openapi.naver.com/v1/search/blog.json'\n",
+    "url = 'https://openapi.naver.com/v1/search/blog.json' # ?query=python\n",
     "\n",
     "\n",
     "# requests get(url, params, headers) 요청 \n",
+    "res = requests.get(url, params=payload, headers=headers)\n",
+    "items_data = res.json()['items']\n",
     "\n",
-    "# json() 함수로 응답 결과 가져오오기\n",
-    "# 'title' , 'bloggername' , 'description' , 'bloggerlink' , 'link'\n",
+    "# print(type(res.json()))\n",
+    "# print(len(res.json()['items']), type(items_data), type(items_data[0]))\n",
     "\n",
-    "# 'data/nhnblog.txt' 파일 생성하기\n"
+    "#[{},{},}{}]\n",
+    "# [] : 100개의 데이터 , {tittle:'',link:''} = 1개의 블로그 글 데이터\n",
+    "\n",
+    "\n",
+    "# #print(items_data)\n",
+    "# # json() 함수로 응답 결과 가져오기\n",
+    "# # 'title' , 'bloggername' , 'description' , 'bloggerlink' , 'link'\n",
+    "\n",
+    "items_list = list()\n",
+    "item_list = []\n",
+    "for item in items_data[:2]:\n",
+    "#     print(item)\n",
+    "    item_list.append(item['title'])\n",
+    "    item_list.append(item['bloggername'])\n",
+    "    item_list.append(item['description'])\n",
+    "    item_list.append(item['bloggerlink'])\n",
+    "    item_list.append(item['link'])\n",
+    "\n",
+    "    items_list.append(item_list)\n",
+    "    item_list = []\n",
+    "\n",
+    "print(items_list) #[[],[]]\n",
+    "\n",
+    "# 'data/nhnblog.txt' 파일 생성하기\n",
+    "with open('data/nhnblog.txt','w',encoding=\"utf-8\")as file:\n",
+    "    for items in items_list:\n",
+    "        for item in items:\n",
+    "            item = item + '\\n'\n",
+    "            file.write(item)\n",
+    "        file.write('-'*150+'\\n')"
    ]
   }
  ],
