dict에 저장하기

--- a/00python_basic.ipynb
+++ b/00python_basic.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "d5840391-cc25-42af-a9dd-c77990e20e51",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "range(0, 10)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "2772e022-f624-4d2b-a672-fc3805c88523",
    "metadata": {},
    "outputs": [
@@ -589,19 +589,20 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "# range() 함수와는 다르게 arange() 함수는 Iterable 객체를 생성한다.\n",
     "np.arange(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "1d1e80c4",
    "metadata": {},
    "outputs": [
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "5205afb0",
    "metadata": {},
    "outputs": [
@@ -643,7 +644,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,6 +805,30 @@
    ],
    "source": [
     "(12,15) < (12,17) # True 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "11d5fd06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['010-1234-5678', '010-9876-5432']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "text = \"제 번호는 010-1234-5678이고, 친구 번호는 010-9876-5432입니다.\"\n",
+    "pattern = r\"\\d{3}-\\d{4}-\\d{4}\"\n",
+    "\n",
+    "phones = re.findall(pattern, text)\n",
+    "print(phones) # ['010-1234-5678', '010-9876-5432']"
    ]
   }
  ],
