--- a/04.Melon100차트_데이터파싱_DB저장.ipynb
+++ b/04.Melon100차트_데이터파싱_DB저장.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,16 @@
      "output_type": "stream",
      "text": [
       "100\n",
-      "100 [{'title': 'Dynamite', 'id': '32872978', 'url': 'https://www.melon.com/song/detail.htm?songId=32872978'}, {'title': 'Cherish (My Love)', 'id': '38123775', 'url': 'https://www.melon.com/song/detail.htm?songId=38123775'}, {'title': '네모네모', 'id': '38048464', 'url': 'https://www.melon.com/song/detail.htm?songId=38048464'}]\n"
+      "100\n",
+      "[{'id': '38589554',\n",
+      "  'title': 'TOO BAD (feat. Anderson .Paak)',\n",
+      "  'url': 'https://www.melon.com/song/detail.htm?songId=38589554'},\n",
+      " {'id': '38429074',\n",
+      "  'title': '모르시나요(PROD.로코베리)',\n",
+      "  'url': 'https://www.melon.com/song/detail.htm?songId=38429074'},\n",
+      " {'id': '38629386',\n",
+      "  'title': 'like JENNIE',\n",
+      "  'url': 'https://www.melon.com/song/detail.htm?songId=38629386'}]\n"
      ]
     }
    ],
@@ -27,14 +36,56 @@
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
+    "from pprint import pprint\n",
     "url = 'https://www.melon.com/chart/index.htm'\n",
+    "\n",
     "\n",
     "headers = {\n",
     "    'user-agent':'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36'\n",
     "}\n",
     "\n",
-    "# 노래 상세정보 song_url = f'https://www.melon.com/song/detail.htm?songId={song_id}'\n",
+    "res = requests.get(url, headers=headers)\n",
+    "\n",
+    "if res.ok:\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "    print(len(soup.select(\"a[href*='playSong']\"))) # atag중에 playSong라는 말이 포함된 문자열을 찾아라\n",
+    "    atag_list = soup.select(\"a[href*='playSong']\")\n",
+    "    \n",
+    "    # [{}, {}]\n",
+    "    song_list = [] # 100곡의 song 을 저장하는 song list 생성성\n",
+    "    for idx, atag in enumerate(atag_list,1): # ,1은 1부터라는 의미 enumerate : 출력앞에 숫자를 나타내고 싶다 / idx에 숫자를 저장한다\n",
+    "        \n",
+    "        song_dict = {}  # 1곡의 정보를 저장할 딕셔너리(dict)  \n",
+    "        #print(f'순서 = {idx} ')\n",
+    "        \n",
+    "        #song title을 for문을 돌면서 각각 딕셔너리에 저장\n",
+    "        title = atag.text\n",
+    "        song_dict['title'] = title\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        href = atag['href']\n",
+    "        matched = re.search(r'(\\d+)\\)', href)   # search (패턴 , 대상 문자열)\n",
+    "        #print(matched)\n",
+    "        if matched:\n",
+    "            #print(matched.group(0), matched.group(1)) group(0) : 마지막 괄호 포함 / group(1) : 마지막 괄호 미포함\n",
+    "            song_id = matched.group(1) \n",
+    "        song_dict['id'] = song_id\n",
+    "        \n",
+    "        #노래 상세 정보 url\n",
+    "        song_url = f'https://www.melon.com/song/detail.htm?songId={song_id}'   \n",
+    "        song_dict['url'] = song_url\n",
+    "        \n",
+    "        \n",
+    "        song_list.append(song_dict)\n",
+    "        \n",
+    "    #song_list 확인\n",
+    "    pprint(len(song_list))\n",
+    "    pprint(song_list[:3])   \n",
+    "else:\n",
+    "    print(f'Error Code = {res.status_code}')\n",
+    "\n",
     "\n"
    ]
   },
