하나만 출력

--- a/05.국회의원현황_22대_sol.ipynb
+++ b/05.국회의원현황_22대_sol.ipynb
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "b6737353-8f1f-4654-a8d1-a7d0fb09fc88",
    "metadata": {},
    "outputs": [
@@ -1474,9 +1474,9 @@
     "figure, (axes1,axes2,axes3) = plt.subplots(nrows=3, ncols=1)\n",
     "figure.set_size_inches(18,12)\n",
     "\n",
-    "sns.countplot(data=member_df, x='정당', ax=axes1, order=member_df['정당'].value_counts().index, hue='정당')\n",
-    "sns.countplot(data=member_df, x='당선횟수', ax=axes2, order=member_df['당선횟수'].value_counts().index,hue='당선횟수')\n",
-    "sns.countplot(data=member_df, x='성별', ax=axes3, order=member_df['성별'].value_counts().index,hue='성별')\n",
+    "_=sns.countplot(data=member_df, x='정당', ax=axes1, order=member_df['정당'].value_counts().index, hue='정당')\n",
+    "_=sns.countplot(data=member_df, x='당선횟수', ax=axes2, order=member_df['당선횟수'].value_counts().index,hue='당선횟수')\n",
+    "_=sns.countplot(data=member_df, x='성별', ax=axes3, order=member_df['성별'].value_counts().index,hue='성별')\n",
     "\n",
     "plt.show()"
    ]
